close #4 flickering issue

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -284,6 +284,9 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 \*------------------------------------*/
 
 #nav {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
     padding: 10px 0px;
     background: #FFF;
     -webkit-transition: 0.2s padding;
@@ -298,9 +301,6 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 }
 
 #nav.fixed-nav {
-    position: fixed;
-    left: 0;
-    right: 0;
     padding: 0px 0px;
     background-color: #FFF !important;
     border-bottom: 1px solid #CCC;
